# LayOpt

./: .copier-answers.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .pylint.toml  .pylintrc.toml  .testmondata  404.html  CITATION.cff  COPYING.md  README.md  examples.py  index.html  index.md~  mkdocs.yml  noxfile.py  objects.inv  parallel_forces.csv  pyproject.toml  short_cantilever.csv  sitemap.xml  spanning_example.csv  square_cantilever.csv
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build_mkdocs.yaml  ci.yml  tests.yaml
api/: index.html
api/config/: index.html
api/entry_point/: index.html
api/io/: index.html
api/layopt/: index.html
api/logging/: index.html
api/run_modules/: index.html
api/validation/: index.html
contributing/: index.html
docs/: api.md  contributing.md  index.md  installation.md  usage.md
docs/api/: config.md  entry_point.md  index.md  io.md  layopt.md  logging.md  run_modules.md  validation.md
installation/: index.html
search/: search_index.json
src/layopt/: __init__.py  adaptive_top_opt_patterns_with_benchmarking.py  config.py  default_config.yaml  entry_point.py  io.py  layopt.py  logging.py  plotting.py  run_modules.py  validation.py
tests/: conftest.py  conftest.py.orig  test_config.py  test_entry_point.py  test_io.py  test_layopt.py  test_layopt.py.orig  test_package.py  test_plotting.py  test_run_modules.py  test_validation.py
tests/__snapshots__/: test_entry_point.ambr  test_io.ambr  test_layopt.ambr  test_run_modules.ambr
usage/: index.html
