[build-system]
requires = ["uv_build>=0.7.19"]
build-backend = "uv_build"


[project]
name = "LayOpt"
version = "0.1.0"
authors = [
  { name = "Helen Fairclough", email = "helen.fairclough@sheffield.ac.uk" },
  { name = "Andrew Fisher", email = "andrew.fisher@sheffield.ac.uk" },
  { name = "Neil Shephard", email = "n.shephard@sheffield.ac.uk" },
]
description = "Adaptive topology optimization of fail-safe trusses"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["COPYING.md"]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "art",
  "loguru",
  "matplotlib",
  "mosek",
  "numpy",
  "pandas",
  "pandas-stubs",
  "pydantic",
  "schema",
  "scipy",
  "shapely",
  "tqdm",
  "tzdata",
]

[project.urls]
Homepage = "https://github.com/ICAIR-Sheffield/LayOpt"
"Bug Tracker" = "https://github.com/ICAIR-Sheffield/LayOpt/issues"
Discussions = "https://github.com/ICAIR-Sheffield/LayOpt/discussions"
Changelog = "https://github.com/ICAIR-Sheffield/LayOpt/releases"


[dependency-groups]
test = [
  "pytest>=9.0.3",
  "pytest-cov >=7",
  "pytest-loguru",
  "pytest-testmon",
  "pytest-xdist",
  "syrupy"
]
dev = [
  { include-group = "test" },
  { include-group = "docs" },
  "black",
  "codespell",
  "ipdb",
  "mypy",
  "pre-commit",
  "pydocstyle[toml]",
  "pylint",
  "ruff",
  "scipy-stubs",
  "tomli",
  "types-PyYAML",
]
docs = [
  "markdown>=3.9",
  "mdx-include>=1.4.2",
  "mkdocs-get-deps>=0.2.2",
  "mkdocs-material>=9.7.6",
  "mkdocs-mermaid2-plugin",
  "mkdocs>=1.6.1,<=2.0.0",
  "mkdocstrings-python>=2.0.3",
  "pyyaml>=6.0.1",
]


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["layopt"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "layopt.*",
  "loguru.*",
  "numpy.*",
  "pandas.*",
  "pydantic.*",
  "schema.*",
  "syrupy.*",
  "tqdm.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "TRY003",   # Raise vanilla args
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["layopt._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"docs/examples/**" = ["T20"]


[tool.pylint]
py-version = "3.12"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]

[tool.numpydoc_validation]
checks = [
  "all", # Perform all check except those listed below
  "ES01",
  "EX01",
  "PR10", # Conflicts with black formatting
  "SA01",
]
exclude = [  # don't report on objects that match any of these regex
    "\\.undocumented_method$",
    "\\.__repr__$",
    "^test_",
    "^conftest",
    "^conf$",
    "^noxfile.py$",
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    "^Process ",
    "^Assess ",
    "^Access ",
]

[tool.codespell]
skip = 'uv.lock'
count = ''
quiet-level = 3
# ignore-words-list = ''

[project.scripts]
layopt = "layopt.entry_point:entry_point"
